@@ -28,6 +28,7 @@
 
 import unittest
 
+from webkitpy.common.system.outputcapture import OutputCapture
 from webkitpy.common.system.user import User
 
 class UserTest(unittest.TestCase):
@@ -51,21 +52,28 @@ class UserTest(unittest.TestCase):
         self.assertEqual(User.prompt("input", repeat=self.repeatsRemaining, raw_input=mock_raw_input), None)
 
     def test_prompt_with_list(self):
-        def run_prompt_test(options, inputs, expected_result, can_choose_multiple=False):
+        def run_prompt_test(inputs, expected_result, can_choose_multiple=False):
             def mock_raw_input(message):
                 return inputs.pop(0)
-            self.assertEqual(User.prompt_with_list("title", options, can_choose_multiple=can_choose_multiple, raw_input=mock_raw_input), expected_result)
+            output_capture = OutputCapture()
+            actual_result = output_capture.assert_outputs(
+                self,
+                User.prompt_with_list,
+                args=["title", ["foo", "bar"]],
+                kwargs={"can_choose_multiple": can_choose_multiple, "raw_input": mock_raw_input},
+                expected_stdout="title\n 1. foo\n 2. bar\n")
+            self.assertEqual(actual_result, expected_result)
             self.assertEqual(len(inputs), 0)
 
-        run_prompt_test(["foo", "bar"], ["1"], "foo")
-        run_prompt_test(["foo", "bar"], ["badinput", "2"], "bar")
+        run_prompt_test(["1"], "foo")
+        run_prompt_test(["badinput", "2"], "bar")
 
-        run_prompt_test(["foo", "bar"], ["1,2"], ["foo", "bar"], can_choose_multiple=True)
-        run_prompt_test(["foo", "bar"], ["  1,  2   "], ["foo", "bar"], can_choose_multiple=True)
-        run_prompt_test(["foo", "bar"], ["all"], ["foo", "bar"], can_choose_multiple=True)
-        run_prompt_test(["foo", "bar"], [""], ["foo", "bar"], can_choose_multiple=True)
-        run_prompt_test(["foo", "bar"], ["  "], ["foo", "bar"], can_choose_multiple=True)
-        run_prompt_test(["foo", "bar"], ["badinput", "all"], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test(["1,2"], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test(["  1,  2   "], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test(["all"], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test([""], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test(["  "], ["foo", "bar"], can_choose_multiple=True)
+        run_prompt_test(["badinput", "all"], ["foo", "bar"], can_choose_multiple=True)
 
 if __name__ == '__main__':
     unittest.main()
